--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular": "^1.8.3",
     "angular-route": "^1.8.3",
     "angular-sanitize": "^1.8.3",
+    "angular-ui-bootstrap": "^2.5.6",
+    "crypto-js": "^4.2.0",
     "json-server": "^1.0.0-beta.3"
   },
   "devDependencies": {
